// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [server] 1`] = `
"
const config = {
  \\"port\\": 1234
}

const port = config.port

export default port
"
`;

exports[`config with process.env works correctly [server] 1`] = `
"
const config = {
  \\"port\\": process.env.PORT
}

const port = config.port

export default port
"
`;
